fix(nav): contrast
- color contrast for nav bg
- color contrast for card text

Note: Will reintroduce these bugs in a separate activity branch.

--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,6 +1,6 @@
 /* Color palette https://coolors.co/75f4f4-ff5b5e-ec4067-a01a7d-311847 */
 header {
-  background-color: #EC4067;
+  background-color: #A01A7D;
 }
 
 .main-level,
