--- a/src/app/containers/catalog-browse/catalog-browse.component.css
+++ b/src/app/containers/catalog-browse/catalog-browse.component.css
@@ -12,7 +12,7 @@ figcaption {
   padding: .5rem 1rem;
   font-size: .6rem;
   font-style: italic;
-  color: #999;
+  color: #666;
 }
 
 h2 {
